# cookiecutters

./: CHANGELOG.rst  Makefile  README.md  bumpver.toml  cookiecutter.json  notes.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: tests.yml
dsproject/: README.md  cookiecutter.json  requirements.in  requirements.txt
dsproject/hooks/: post_gen_project.py
dsproject/tests/: test_project_creation.py
dsproject/{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CONTRIBUTING.MD  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.in
dsproject/{{cookiecutter.project_slug}}/.github/: PULL_REQUEST_TEMPLATE.md
dsproject/{{cookiecutter.project_slug}}/.github/workflows/: docs_publish.yml  tests.yml
dsproject/{{cookiecutter.project_slug}}/configs/: config.yaml
dsproject/{{cookiecutter.project_slug}}/models/: README.md
dsproject/{{cookiecutter.project_slug}}/reports/: README.md
dsproject/{{cookiecutter.project_slug}}/scripts/: __init__.py  example.py
dsproject/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
pyproject/: README.md  cookiecutter.json
pyproject/{{cookiecutter.project_slug}}/: .coveragerc  .pre-commit-config.yaml  CONTRIBUTING.MD  README.md  pyproject.toml  requirements.in
pyproject/{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md
pyproject/{{cookiecutter.project_slug}}/.github/workflows/: tests.yml
pyproject/{{cookiecutter.project_slug}}/docs/: index.md
pyproject/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
src/cookiecutters/: __init__.py
src/cookiecutters/newsfragments/: 43.added  46.fixed
